# shibofinance

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.json
apps/api/: Dockerfile  alembic.ini  import_santander.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2412e25c519e_initial_schema.py  a1b2c3d4e5f6_add_categorization_source.py  c3d4e5f6a7b8_add_category_rules.py  d4e5f6a7b8c9_add_budget_planning.py  e5f6a7b8c9d0_add_payables.py  f6a7b8c9d0e1_add_investments.py  g7b8c9d0e1f2_add_portfolio_snapshot_items.py
apps/api/app/: db.py  main.py  models.py  schemas.py  settings.py
apps/api/app/routers/: bank_transactions.py  budgets.py  card_transactions.py  categories.py  categorizations.py  category_rules.py  imports.py  instruments.py  investments.py  payables.py  spending_summary.py  statements.py
apps/api/app/services/: dedupe_service.py  fingerprint_service.py  import_service.py  portfolio_service.py  recurring_detection.py  rule_engine.py  statement_matcher.py
apps/api/tests/: conftest.py  test_api.py  test_bbva_uy.py  test_budgets.py  test_categorization.py  test_category_rules.py  test_core.py  test_import_idempotency.py  test_importer_framework.py  test_investments.py  test_payables.py  test_santander_br.py  test_statement_matcher.py  test_xp_br.py
apps/web/: package-lock.json  package.json
apps/web/messages/: en.json  es.json  pt.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: ROADMAP.md  SETUP_DEV_ENV.md  TASKS.md  UI_SPEC.md
tools/: import_cli.py
(+73 files in other folders)
